--- a/docs/Makefile
+++ b/docs/Makefile
@@ -3,12 +3,13 @@
 
 all:
 	mkdir -p out/
-	#cp *.tex out/
-	#cp *.bst out/
-	#cp *.cls out/
-	#cp *.bib out/
-	#cp *.tex out/
-	#pdflatex --shell-escape --output-directory=./out zavrsni.tex
+	# cp *.tex out/
+	# cp *.bst out/
+	# cp *.cls out/
+	# cp *.bib out/
+	# cp *.tex out/
+	# cd out/
+	# pdflatex --shell-escape zavrsni.tex
 	latexmk -shell-escape -auxdir=./out -outdir=./out -pdf -pvc zavrsni.tex 
 
 clean:
